--- a/web/WEB-INF/View/sidebar.jspf
+++ b/web/WEB-INF/View/sidebar.jspf
@@ -2,21 +2,22 @@
 <nav>
     <ul>
         <li>
-            <a href="index.jsp">HOME</a>
+            <a href='<%=response.encodeURL("index.jsp")%>'>HOME</a>
 
         </li>
         <li>
             <%
                 if(u.getId_role()==1){
             %>
-            <a href="FormAddController?action=add">AGGIUNGI PRODOTTO</a>
+
+            <a href='<%=response.encodeURL("FormAddController?action=add")%>'>AGGIUNGI PRODOTTO</a>
         </li>
             <%
                 }
             %>
         <li>
-        <a href="FilmList">VISUALIZZA LISTA</a>
 
+        <a href='<%=response.encodeURL("FilmList")%>'>VISUALIZZA LISTA</a>
     </li>
     </ul>
 </nav>
